# python-project-templates

./: .bumpversion.cfg  .gitattributes  .gitignore  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  publish.yml
